--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/cli": "2.15.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.22",
     "express-validator": "^6.9.2",
     "nodemon": "^2.0.7",
