--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,8 @@
         "outDir": "./build",
         "esModuleInterop": true,
         "strict": true
-    }
+    },
+    "files": [
+        "custom.d.ts"
+    ]
 }
