--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="postgresql://postgres:secret@localhost:5432/prisma?schema=public"
 
 APP_SECRET="topsecret"
+ACCESS_TOKEN_SECRET="0R8IecwH8QrdxQFuqKmKoWFEobMFzP1P"
+REFRESH_TOKEN_SECRET="foPer61MGasSovFxtdLxJpEqR8ShPuf2"
