--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "2.15.0",
+    "@prisma/client": "^2.16.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -20,7 +20,9 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.2"
+    "moment": "^2.29.1",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@prisma/cli": "2.15.0",
@@ -30,8 +32,10 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
+    "@types/uuid": "^8.3.0",
     "express-validator": "^6.9.2",
     "nodemon": "^2.0.7",
+    "prisma": "^2.16.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
