--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
+    "redis": "^3.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
+    "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
     "express-validator": "^6.9.2",
     "nodemon": "^2.0.7",
